k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catshoulder
  labels:
    app: catshoulder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catshoulder
  template:
    metadata:
      labels:
        app: catshoulder
    spec:
      containers:
        - name: catshoulder
          image: ghcr.io/sayjeyhi/catshoulder-website:latest
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              memory: "128Mi"
