k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catshoulder-service
spec:
  selector:
    app: catshoulder
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
