k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catshoulder-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - catshoulder.dev
        - www.catshoulder.dev
      secretName: catshoulder-tls-v2
  rules:
    - host: catshoulder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catshoulder-service
                port:
                  number: 8080
    - host: www.catshoulder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catshoulder-service
                port:
                  number: 8080
